build: migrate to Gradle 9.3.1 (Kotlin DSL), Spring Boot 3.5.11, Java 25
Build system:
- Replace pom.xml with settings.gradle.kts and build.gradle.kts using Gradle 9.3.1 wrapper
- Drop io.spring.dependency-management plugin (removed LenientConfiguration.getFiles() in Gradle 9); import Boot BOM via platform() instead
- Java 25 toolchain for compilation
- Upgrade Lombok to 1.18.42 for Java 25 annotation processor support

Spring Boot 2.1.5 → 3.5.11 (Jakarta EE 10):
- Migrate all javax.persistence/validation/servlet/transaction/annotation imports to jakarta.*
- Replace AbstractWebSocketMessageBrokerConfigurer (removed) with WebSocketMessageBrokerConfigurer interface
- Rewrite SecurityConfiguration: drop WebSecurityConfigurerAdapter and spring-security-oauth2-autoconfigure, use SecurityFilterChain bean with Spring Security 6 DSL
- Add spring-boot-starter-validation for Bean Validation API

Remove VK, Telegram, and old OAuth2 integration (incompatible with Spring Security 6):
- Delete BotListener, VkClient, GoogleClient, and all OAuth2 filter classes
- These are superseded by proper Google OAuth2 implementation in the auth-google-only PR

Housekeeping:
- Move application.properties to src/main/resources/
- Migrate all tests from JUnit 4 to JUnit 5 (Jupiter)
- Remove pom.xml, ANF.iml; update .gitignore for Gradle layout

All 35 tests pass with ./gradlew build.

Made-with: Cursor